Added date range filter for transactions

--- a/src/App/Client/GoldEx.Client/Pages/Transactions/Components/TransactionsList.razor
+++ b/src/App/Client/GoldEx.Client/Pages/Transactions/Components/TransactionsList.razor
@@ -6,6 +6,11 @@
         <MudTextField T="string" AutoFocus="true" Clearable="true" Immediate="true" ValueChanged="@(s=>OnSearch(s))" Placeholder="جستجو ..." Adornment="Adornment.Start"
                       AdornmentIcon="@Icons.Material.Filled.Search" IconSize="Size.Medium" Class="mt-0"></MudTextField>
         <MudSpacer />
+        
+        <MudHidden Breakpoint="Breakpoint.SmAndDown">
+            <MudDateRangePicker DateRange="@_filterDateRange" DateRangeChanged="OnDateRangeChanged" Margin="Margin.Dense" Variant="Variant.Outlined" Class="ml-3"
+                                PlaceholderStart="از" PlaceholderEnd="تا" Label="تاریخ تراکنش" Clearable="true" />
+        </MudHidden>
 
         <MudHidden Breakpoint="Breakpoint.SmAndDown">
             <MudButton Class="ml-4" Color="Color.Primary"EndIcon="@Icons.Material.Filled.Add" 
